# acerl

./: .gitignore  README.md  base.cfg  manage.py  pylintrc  pyproject.toml  selfsigned.crt  selfsigned.key  setup.py  supervisord.conf
docs/source/: conf.py
researchlibrary/: development.py  production.py  settings.py  urls.py  wsgi.py
researchlibrary/api/: apps.py  fields.py  models.py  models_choices.py  pagination.py  search_backends.py  search_indexes.py  serializers.py  signal_processors.py  urls.py  views.py
researchlibrary/api/admin/: admins.py  utils.py  widgets.py
researchlibrary/api/management/commands/: endnote_export.py  fulltext_import.py  google_import.py  sciwheel_import.py
researchlibrary/api/migrations/: 0001_initial.py  0002_auto_20160516_1204.py  0003_auto_20160516_1213.py  0004_auto_20160516_1330.py  0005_resource_accessed.py  0006_auto_20160608_1031.py  0007_auto_20160608_1052.py  0008_auto_20160608_1347.py  0009_resource_fulltext.py  0010_auto_20160613_1827.py  0011_auto_20160619_0934.py  0012_auto_20160702_1500.py  0013_auto_20160915_1518.py  0014_auto_20170117_0845.py  0015_auto_20200102_1253.py  0016_resource_approx_published.py  0017_auto_20200102_1424.py  0018_remove_old_categories.py  0019_auto_20200423_1931.py  0020_auto_20200424_1400.py  0021_auto_20200429_1357.py  0022_auto_20200505_1427.py  0023_auto_20200506_0950.py  0024_auto_20200720_1056.py
researchlibrary/api/search/: backends.py  fields.py  indexes.py
researchlibrary/api/templates/api/: change_form.html
researchlibrary/api/templates/search/indexes/api/: resource_text.txt
researchlibrary/api/templatetags/: apitags.py
researchlibrary/api/tests/: test_admin.py  test_list.py  test_models.py  test_search.py  test_suggest.py
