[tool.poetry]
name = "acerl"
version = "0.1.0"
description = ""
authors = ["Denis Drescher <denis.drescher@claviger.net>"]

[tool.poetry.dependencies]
Django = "^1.9.7"
django-compressor = "2.0"
django-cors-headers = "2.0.2"
django-filter = "0.13.0"
django-flat-theme = "1.1.3"
django-haystack = "^2.8.1"
django-jinja = "2.1.2"
django-mptt = "0.8.7"
Django-Select2 = "5.8.5"
djangorestframework = "^3.3.3"
gspread = "0.3.0"
gunicorn = "^20.0.4"
Jinja2 = "2.8"
Markdown = "^3.1.1"
oauth2client = "2.0.2"
psycopg2 = "2.8.4"
pysolr = "^3.6.0"
python = "^3.7"
python-dateutil = "2.5.3"
pytz = "2016.3"
readability-lxml = "0.6.2"
requests = "2.10.0"
Sphinx = "1.4.1"
stop-words = "2015.2.23.1"
utilofies = "2.2.1"
Whoosh = "^2.7.4"
supervisor = "^4.1.0"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}
django-debug-panel = "0.8.2"
django-debug-toolbar = "1.4"
django-extensions = "1.6.1"
ipython = "^7.5"
isort = {version = "^4.3", allow-prereleases = true}
ptyprocess = "^0.6.0"
pylint = "^2.4.4"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

