[tool.poetry]
name = "acerl"
version = "0.1.0"
description = ""
authors = ["Denis Drescher <denis.drescher@claviger.net>"]

[tool.poetry.dependencies]
Django = "^3.2.5"
django-compressor = "^2.4.1"
django-cors-headers = "^3.7.0"
django-environ = "^0.4.5"
django-filter = "^2.4.0"
django-flat-theme = "^1.1.4"
django-haystack = "^3.0"
django-jinja = "^2.9.0"
django-mptt = "^0.12.0"
django-select2 = "^7.7.1"
djangorestframework = "^3.12.4"
gspread = "^3.7.0"
gunicorn = "^22.0.0"
Jinja2 = "^3.1.4"
Markdown = "^3.3.4"
oauth2client = "^4.1.3"
psycopg2-binary = "^2.9.1"
pysolr = "^3.9.0"
python = "^3.7"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
readability-lxml = "^0.8.1"
requests = "^2.26.0"
Sphinx = "^4.1.2"
stop-words = "^2018.7.23"
supervisor = "^4.2.2"
utilofies = "^2.4.1"
Whoosh = "^2.7.4"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
django-debug-panel = "^0.8.3"
django-debug-toolbar = "^3.2.1"
django-extensions = "^3.1.3"
ipython = "^7.25.0"
isort = "^5.9.2"
ptyprocess = "^0.7.0"
pylint = "^2.9.5"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

